--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "create-shared-react-context": "^1.0.4",
     "link-react": "^3.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -14,6 +15,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "use-global-context": "^0.8.0",
+    "use-memo-one": "^1.1.2",
+    "usestate": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
