--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "create-shared-react-context": "^1.0.4",
     "link-react": "^3.0.0",
     "node-sass": "^6.0.1",
