--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "use-global-context": "^0.8.0",
     "use-memo-one": "^1.1.2",
     "usestate": "^1.1.3",
