--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
+    "socket.io": "^4.4.1",
     "use-global-context": "^0.8.0",
     "use-memo-one": "^1.1.2",
     "usestate": "^1.1.3",
