--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-explode": "^2.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "socket.io": "^4.4.1",
